--- a/launchbar-themes/macOS Light — XL.lbtheme/Contents/Resources/Properties.plist
+++ b/launchbar-themes/macOS Light — XL.lbtheme/Contents/Resources/Properties.plist
@@ -3,41 +3,33 @@
 <plist version="1.0">
 <dict>
 
+	<key>itemListSubtitleInSeparateLine</key>
+	<false/>
+
+	<key>itemListTitleBaselineOffset</key>
+	<string>-1.5</string>
+	<key>itemListSubtitleBaselineOffset</key>
+	<string>-1.85</string>
+
+	<key>itemListTitleFontSize</key>
+	<string>16</string>
+	<key>itemListSubtitleFontSize</key>
+	<string>12.5</string>
+
+	<key>itemListSubtitleFontName</key>
+	<string>mediumSystemFont</string>
+	
+	
+	<key>inputAreaHeight</key>
+	<integer>59</integer>
+	<key>itemListRowHeight</key>
+	<string>41</string>
+
+
 	<key>inputAreaIconSize</key>
-	<string>40 40</string>
+	<string>36 36</string>
 	<key>itemListIconSize</key>
 	<string>32 32</string>
-
-
-
-	<key>templateIconTintColor</key>
-	<string>#464749</string>
-	<key>templateIconSelectedShadow@1x</key>
-	<string>@defaultSelectedTextShadow</string>
-	<key>templateIconSelectedTintColor</key>
-	<string>@defaultSelectedTextColor</string>
-
-
-	<key>defaultTextColor</key>
-	<string>#464749</string>
-	<key>defaultTextShadowColor</key>
-	<string>clearColor</string>
-	<key>defaultDimmedTextColor</key>
-	<string>#808080</string>
-
-	<key>defaultFontName</key>
-	<string>lightSystemFont</string>
-	<key>defaultEmphasizedFontName</key>
-	<string>semiboldSystemFont</string>
-	<key>defaultSelectedTextShadowColor@2x</key>
-	<string>clearColor</string>
-
-
-
-	<key>windowDefaultWidth</key>
-	<string>700</string>
-	<key>windowMinimumWidth</key>
-	<string>700</string>
 
 
 	<key>windowCornerRadius</key>
@@ -46,233 +38,200 @@
 	<integer>6</integer>
 
 
+	<key>inputAreaPaddingLeft</key>
+	<integer>17</integer>
+
+
+	<key>itemListEdgeInsets</key>
+	<string>10 11 10 11</string>
+
+
+	<key>itemListSeparatorUpperLineThickness</key>
+	<integer>1</integer>
+	<key>itemListSeparatorUpperLineColor</key>
+	<string>0 0 0 0.1</string>
+
+	<key>itemListSeparatorLowerLineThickness</key>
+	<integer>0</integer>
+	<key>itemListSeparatorLowerLineColor</key>
+	<string>clearColor</string>
+
+
+	<key>itemListSelectionHighlightColor</key>
+	<string>#0A83FE</string>
+	<key>itemListSelectionSubsearchHighlightColor</key>
+	<string>@itemListSelectionHighlightColor - 0.15</string>
+
+
+	<key>windowDefaultWidth</key>
+	<string>700</string>
+	<key>windowMinimumWidth</key>
+	<string>700</string>
+
+
+	<key>inputAreaBackgroundGradient</key>
+	<dict>
+		<key>0.0</key>
+		<string>#FFFFFF05</string>
+		<key>0.0</key>
+		<string>#FFFFFF05</string>
+	</dict>
+
+
+	<key>itemListGridLineHeight</key>
+	<integer>0</integer>
+	<key>itemListGridLineGradient</key>
+	<dict>
+		<key>0.0</key>
+		<string>0 0 0 0.07</string>
+		<key>0.1</key>
+		<string>0 0 0 0.07</string>
+		<key>0.9</key>
+		<string>0 0 0 0.07</string>
+		<key>1.0</key>
+		<string>0 0 0 0.07</string>
+	</dict>
+	<key>itemListGridLineShadowHeight</key>
+	<integer>0</integer>
+
+
+	<key>itemListSelectedSubtitleTextColor</key>
+	<string>#a6daff</string>
+	
+
 	<key>windowBackgroundColor</key>
-	<string>#F5F5F5f7</string>
-	<key>windowBackgroundBlurRadius</key>
-	<string>2</string>
-
-	<key>windowShadowStyle</key>
-	<integer>2</integer>
-
-	<key>windowHasInnerShadow</key>
-	<false/>
+	<string>#FFFFFF73</string>
+	<key>windowBackgroundMaterial</key>
+	<string>20</string>
 
 
 
 
-	<key>inputAreaTextColor</key>
-	<string>#030303</string>
-	<key>textInputTextColor</key>
-	<string>#030303</string>
-	<key>textInputSelectedTextColor</key>
-	<string>#030303</string>
-	<key>textInputSelectedTextBackgroundColor</key>
-	<string>#0077FF40</string>
-
-
-	<key>inputAreaDimmedTextColor</key>
-	<string>@defaultDimmedTextColor</string>
-
-
+	<key>defaultFontName</key>
+	<string>lightSystemFont</string>
+	<key>defaultEmphasizedFontName</key>
+	<string>semiboldSystemFont</string>
+	<key>defaultSelectedTextShadowColor@2x</key>
+	<string>clearColor</string>
+	<key>defaultDimmedTextColor</key>
+	<string>#707070</string>
+	<key>defaultTextColor</key>
+	<string>#404040</string>
+	<key>defaultTextShadowColor</key>
+	<string>clearColor</string>
 	<key>inputAreaAbbreviationBaselineOffset</key>
 	<integer>0</integer>
 	<key>inputAreaAbbreviationFontName</key>
 	<string>@defaultFontName</string>
 	<key>inputAreaAbbreviationFontSize</key>
 	<integer>13</integer>
-
-
+	<key>inputAreaAbbreviationFontSize@1x</key>
+	<integer>14</integer>
 	<key>inputAreaAbbreviationInputProgressIndicationOffset</key>
 	<integer>1</integer>
-	<key>inputAreaAbbreviationInputProgressIndicationThickness</key>
+	<key>inputAreaAbbreviationInputProgressIndicationThickness@1x</key>
 	<integer>1</integer>
-	<key>inputAreaAbbreviationInputProgressIndicationRadius</key>
+	<key>inputAreaAbbreviationInputProgressIndicationThickness@2x</key>
+	<real>1.5</real>
+	<key>inputAreaAbbreviationInputProgressIndicationRadius@1x</key>
 	<integer>0</integer>
-
 	<key>inputAreaActionMenuAreaEdgeInsets</key>
 	<string>-3 0 -3 0</string>
+	<key>inputAreaActionMenuAreaHighlightCornerRadius</key>
+	<string>8</string>
+	<key>inputAreaActionMenuAreaTextShadowColor</key>
+	<string>clearColor</string>
 	<key>inputAreaAutohideOffImagePaddingRight</key>
 	<integer>16</integer>
 
-	<key>inputAreaActionMenuAreaTextShadowColor</key>
-	<string>clearColor</string>
-
-
+	<key>inputAreaDefocusedItemFontName</key>
+	<string>@defaultFontName</string>
+	<key>inputAreaDefocusedItemFontSize</key>
+	<integer>16</integer>
+	<key>inputAreaDimmedTextColor</key>
+	<string>@defaultDimmedTextColor</string>
+	<key>inputAreaFocusedItemBaselineOffset</key>
+	<integer>1</integer>
 	<key>inputAreaFocusedItemFontName</key>
 	<string>@defaultFontName</string>
 	<key>inputAreaFocusedItemFontSize</key>
 	<integer>26</integer>
 
-	<key>inputAreaFocusedItemBaselineOffset</key>
-	<integer>1</integer>
-
-	<key>inputAreaHeight</key>
-	<integer>58</integer>
-	<key>inputAreaPaddingLeft</key>
-	<integer>20</integer>
-	<key>inputAreaPaddingRight</key>
-	<integer>14</integer>
-
-	<key>inputAreaMenuButtonPaddingRight</key>
-	<integer>16</integer>
 	<key>inputAreaKeyCapImagePaddingRight</key>
 	<integer>13</integer>
-
+	<key>inputAreaMenuButtonPaddingRight</key>
+	<integer>16</integer>
+	<key>inputAreaNonKeyWindowTextShadowColor</key>
+	<string>clearColor</string>
 	<key>inputAreaShouldSmoothFonts@1x</key>
 	<false/>
 	<key>inputAreaShouldSmoothFonts@2x</key>
 	<true/>
-	<key>inputAreaNonKeyWindowTextShadowColor</key>
-	<string>clearColor</string>
-
-
-	<key>inputAreaBackgroundGradient</key>
-	<dict>
-		<key>0.0</key>
-		<string>0 0 0 0.0</string>
-		<key>1.0</key>
-		<string>0 0 0 0.0</string>
-	</dict>
-
-
-	<key>inputAreaAbbreviationInputProgressIndicationAlpha</key>
-	<real>0.3</real>
-	<key>inputAreaAbbreviationInputSubsearchProgressIndicationAlpha</key>
-	<real>0.3</real>
-
-
+	<key>inputAreaTextColor</key>
+	<string>#030303</string>
 	<key>inputAreaTextShadowColor</key>
 	<string>clearColor</string>
-
-
-
-
-	<key>textInputBackgroundColor</key>
-	<string>clearColor</string>
-	<key>textInputEdgeInsets</key>
-	<string>8 5 3 8</string>
-	<key>textInputFieldEditorEdgeInsets</key>
-	<string>3.5 0 3 14</string>
-	<key>textInputFieldEditorEdgeInsets@1x</key>
-	<string>3.5 0 3.5 14</string>
-	<key>textInputFieldTextContainerInset</key>
-	<string>0 0</string>
-
-	<key>textInputFocusRingColor</key>
-	<string>clearColor</string>
-	<key>textInputFontName</key>
-	<string>@defaultFontName</string>
-	<key>textInputFontSize</key>
-	<string>@inputAreaFocusedItemFontSize</string>
-
-	<key>textInputInactiveFocusRingColor</key>
-	<string>clearColor</string>
-	<key>textInputShouldSmoothFonts@1x</key>
-	<false/>
-	<key>textInputShouldSmoothFonts@2x</key>
-	<true/>
-
-	<key>textInputTitleFontName</key>
-	<string>@defaultFontName</string>
-	<key>textInputTitleFontSize</key>
-	<integer>16</integer>
-	<key>textInputTitleTextColor</key>
-	<string>@defaultDimmedTextColor</string>
-
-
-
-
-	<key>itemListSeparatorUpperLineColor</key>
-	<string>0 0 0 0.1</string>
-	<key>itemListSeparatorUpperLineThickness</key>
-	<integer>1</integer>
-
-	<key>itemListSeparatorLowerLineColor</key>
-	<string>clearColor</string>
-	<key>itemListSeparatorLowerLineThickness</key>
-	<integer>0</integer>
-
-	<key>itemListGridLineShadowHeight</key>
-	<integer>0</integer>
-
-	<key>itemListGridLineGradient</key>
-	<dict>
-		<key>0.0</key>
-		<string>0 0 0 0.03</string>
-		<key>0.1</key>
-		<string>0 0 0 0.03</string>
-		<key>0.9</key>
-		<string>0 0 0 0.03</string>
-		<key>1.0</key>
-		<string>0 0 0 0.03</string>
-	</dict>
-
-
-
-
-	<key>itemListRowHeight</key>
-	<string>42.0</string>
-
-	<key>itemListTitleFontSize</key>
-	<string>16.5</string>
-	<key>itemListSubtitleFontSize</key>
-	<string>14.0</string>
-	<key>itemListSubtitleInSeparateLine</key>
-	<false/>
-
-	<key>itemListTitleBaselineOffset</key>
-	<string>-1.5</string>
-	<key>itemListSubtitleBaselineOffset</key>
-	<string>-1.65</string>
-
-	<key>itemListTitleFontName</key>
-	<string>mediumtSystemFont</string>
-	<key>itemListSubtitleFontName</key>
-	<string>regularSystemFont</string>
-
-
-	<key>itemListTitleTextColor</key>
-	<string>#000000eb</string>
-
-	<key>itemListSubtitleTextColor</key>
-	<string>#0000008c</string>
-	<key>itemListSelectedSubtitleTextColor</key>
-	<string>#b0e9ff</string>
-
-	<key>itemListSelectionHighlightColor</key>
-	<string>#2480EF</string>
-	<key>itemListSelectionSubsearchHighlightColor</key>
-	<string>#2480EF</string>
-
-	<key>itemListEdgeInsets</key>
-	<string>12 12 12 12</string>
-
-	<key>itemListIconPaddingLeft</key>
-	<integer>12</integer>
-	<key>itemListNavigationArrowPaddingRight</key>
-	<integer>12</integer>
-
 
 	<key>itemListExtraDetailsBaselineOffset</key>
 	<integer>0</integer>
 	<key>itemListExtraDetailsFontName</key>
 	<string>@defaultFontName</string>
 
+	<key>itemListIconPaddingLeft</key>
+	<integer>8</integer>
 	<key>itemListLabeledExtraDetailsBaselineOffset</key>
 	<integer>0</integer>
 	<key>itemListLabeledExtraDetailsDeemphasizedBaselineOffset</key>
 	<integer>1</integer>
-
 	<key>itemListLabeledExtraDetailsFontName</key>
 	<string>lightMonospacedDigitSystemFont</string>
+	<key>itemListNavigationArrowPaddingRight</key>
+	<integer>6</integer>
 	<key>itemListNavigationArrowAreaWidth</key>
-	<integer>35</integer>
+	<integer>30</integer>
+	<key>itemListSelectedTitleFontName@1x</key>
+	<string>@itemListTitleFontName</string>
+	<key>itemListSelectedTitleShadowColor</key>
+	<string>clearColor</string>
+	<key>itemListSubtitleTextColor</key>
+	<string>#00000073</string>
 
+	<key>itemListTitleEmphasizedFontName</key>
+	<string>@defaultEmphasizedFontName</string>
+	<key>itemListTitleFontName</key>
+	<string>regularSystemFont</string>
+	<key>templateIconShadow</key>
+	<string></string>
+	<key>templateIconShadowBlurRadius</key>
+	<string>0</string>
+	<key>templateIconShadowColor</key>
+	<string>clearColor</string>
+	<key>templateIconShadowOffset</key>
+	<string>0 0</string>
+	<key>templateIconSelectedShadow</key>
+	<string></string>
+	<key>templateIconSelectedShadowBlurRadius</key>
+	<string>0</string>
+	<key>templateIconSelectedShadowColor</key>
+	<string>clearColor</string>
+	<key>templateIconSelectedShadowOffset</key>
+	<string>0 0</string>
+	<key>textInputFieldEditorEdgeInsets</key>
+	<string>0 -4 3 0</string>
+	<key>textInputFontName</key>
+	<string>@defaultFontName</string>
+	<key>textInputFontSize</key>
+	<string>@inputAreaFocusedItemFontSize</string>
+	<key>textInputInactiveFocusRingColor</key>
+	<string>clearColor</string>
+	<key>textInputSelectedTextBackgroundColor</key>
+	<string>@itemListSelectionHighlightColor + 0.5</string>
+	<key>textInputShouldSmoothFonts@1x</key>
+	<false/>
+	<key>textInputShouldSmoothFonts@2x</key>
+	<true/>
 
-	<key>itemListNavigationArrowImage</key>
-	<string>NavigationArrow</string>
-	<key>itemListNavigationArrowImageH</key>
-	<string>NavigationArrowH</string>
-
+	<key>windowShadowStyle</key>
+	<integer>2</integer>
 </dict>
 </plist>
