--- a/launchbar-themes/macOS Dark — Large.lbtheme/Contents/Resources/Properties.plist
+++ b/launchbar-themes/macOS Dark — Large.lbtheme/Contents/Resources/Properties.plist
@@ -2,32 +2,37 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>parent</key>
+	<string>at.obdev.LaunchBar.theme.Default</string>
+
+
+	<key>itemListSubtitleInSeparateLine</key>
+	<false/>
+
+	<key>itemListTitleBaselineOffset</key>
+	<string>-1.5</string>
+	<key>itemListSubtitleBaselineOffset</key>
+	<string>-1.85</string>
+
+	<key>itemListTitleFontSize</key>
+	<string>15</string>
+	<key>itemListSubtitleFontSize</key>
+	<string>12.5</string>
+
+	<key>itemListSubtitleFontName</key>
+	<string>mediumSystemFont</string>
+	
+	
+	<key>inputAreaHeight</key>
+	<integer>59</integer>
+	<key>itemListRowHeight</key>
+	<string>41</string>
+
 
 	<key>inputAreaIconSize</key>
 	<string>32 32</string>
 	<key>itemListIconSize</key>
-	<string>28 28</string>
-
-
-
-	<key>defaultTextColor</key>
-	<string>whiteColor</string>
-	<key>defaultTextShadowColor</key>
-	<string>#00000033</string>
-	<key>defaultDimmedTextColor</key>
-	<string>0.8 0.8 0.8</string>
-
-	<key>defaultFontName</key>
-	<string>lightSystemFont</string>
-	<key>defaultEmphasizedFontName</key>
-	<string>semiboldSystemFont</string>
-
-
-
-	<key>windowDefaultWidth</key>
-	<string>700</string>
-	<key>windowMinimumWidth</key>
-	<string>700</string>
+	<string>32 32</string>
 
 
 	<key>windowCornerRadius</key>
@@ -36,23 +41,27 @@
 	<integer>6</integer>
 
 
-
-	<key>windowBackgroundColorIsDark</key>
-	<true/>
-
-	<key>windowBackgroundColor</key>
-	<string>#151a20f5</string>
-	<key>windowBackgroundBlurRadius</key>
-	<integer>2</integer>
+	<key>inputAreaPaddingLeft</key>
+	<integer>19</integer>
 
 
-	<key>windowShadowStyle</key>
-	<integer>2</integer>
+	<key>itemListEdgeInsets</key>
+	<string>10 11 10 11</string>
 
-	<key>windowBackgroundVibrancy</key>	
+
+	<key>itemListSeparatorUpperLineThickness</key>
 	<integer>1</integer>
-	<key>windowVibrantBackgroundColor</key>
-	<string>0 0 0 0.25</string>
+	<key>itemListSeparatorUpperLineColor</key>
+	<string>#FFFFFF20</string>
+
+	<key>itemListSeparatorLowerLineThickness</key>
+	<integer>0</integer>
+	<key>itemListSeparatorLowerLineColor</key>
+	<string>clearColor</string>
+
+
+	<key>itemListScrollerColor</key>
+	<string>#FFFFFF25</string>
 
 
 	<key>windowHasInnerShadow</key>
@@ -60,256 +69,85 @@
 	<key>windowInnerShadowBlurRadius</key>
 	<integer>2</integer>
 	<key>windowInnerShadowColor</key>
-	<string>#ffffff45</string>
+	<string>#FFFFFF45</string>
 	<key>windowInnerShadowOffset</key>
-	<integer>1</integer>
+	<integer>-1</integer>
 
-
-
-
-	<key>inputAreaDimmedTextColor</key>
-	<string>@defaultDimmedTextColor</string>
-	<key>inputAreaAbbreviationTextColor</key>
-	<string>#f9f9f9</string>
-
-
-	<key>inputAreaAbbreviationBaselineOffset</key>
-	<integer>0</integer>
-	<key>inputAreaAbbreviationFontName</key>
-	<string>@defaultFontName</string>
-	<key>inputAreaAbbreviationFontSize</key>
-	<integer>13</integer>
-
-
-	<key>inputAreaAbbreviationInputProgressIndicationOffset</key>
-	<integer>1</integer>
-	<key>inputAreaAbbreviationInputProgressIndicationThickness</key>
-	<integer>1</integer>
-	<key>inputAreaAbbreviationInputProgressIndicationRadius</key>
-	<integer>0</integer>
-
-
-	<key>inputAreaActionMenuAreaEdgeInsets</key>
-	<string>-3 0 -3 0</string>
-	<key>inputAreaAutohideOffImagePaddingRight</key>
-	<integer>16</integer>
-
-	<key>inputAreaActionMenuAreaTextShadowColor</key>
-	<string>@defaultTextShadowColor</string>
-	<key>inputAreaActionMenuAreaBackgroundColor</key>
-	<string>0 0 0 0.12</string>
-
-	<key>inputAreaFocusedItemFontName</key>
-	<string>@defaultFontName</string>
-	<key>inputAreaFocusedItemFontSize</key>
-	<integer>26</integer>
-
-
-	<key>textInputTitleFontSize</key>
-	<integer>13</integer>
-	<key>textInputTitleTextColor</key>
-	<string>#ffffff</string>
-
-	<key>inputAreaAbbreviationFontName</key>
-	<string>@defaultFontName</string>
-	<key>inputAreaAbbreviationFontSize</key>
-	<integer>13</integer>
-
-	<key>inputAreaFocusedItemBaselineOffset</key>
-	<integer>1</integer>
-
-	<key>inputAreaHeight</key>
-	<integer>58</integer>
-	<key>inputAreaPaddingLeft</key>
-	<integer>22</integer>
-	<key>inputAreaPaddingRight</key>
-	<integer>14</integer>
-
-	<key>inputAreaMenuButtonPaddingRight</key>
-	<integer>16</integer>
-	<key>inputAreaKeyCapImagePaddingRight</key>
-	<integer>13</integer>
-
-	<key>inputAreaShouldSmoothFonts@1x</key>
-	<false/>
-	<key>inputAreaShouldSmoothFonts@2x</key>
-	<true/>
-	<key>inputAreaNonKeyWindowTextShadowColor</key>
-	<string>@defaultTextShadowColor</string>
-
-
-	<key>inputAreaBackgroundGradient</key>
-	<dict>
-		<key>0.0</key>
-		<string>0 0 0 0.0</string>
-		<key>1.0</key>
-		<string>0 0 0 0.0</string>
-	</dict>
-
-	<key>inputAreaDefocusedItemFontName</key>
-	<string>@defaultFontName</string>
-
-	<key>inputAreaNonKeyWindowTextColorOffsetLevel</key>
-	<real>-0.3</real>
-
-
-
-
-	<key>textInputTextColor</key>
-	<string>#ffffff</string>
-	<key>inputAreaTextColor</key>
-	<string>#ffffff</string>
-
-	<key>textInputPlaceholderTextColor</key>
-	<string>#ffffff50</string>
-	<key>textInputPlaceholderFontName</key>
-	<string>semiboldSystemFont</string>
-
-	<key>textInputFontName</key>
-	<string>@defaultFontName</string>
-	<key>textInputFontSize</key>
-	<string>@inputAreaFocusedItemFontSize</string>
-
-	<key>textInputSelectedTextBackgroundColor</key>
-	<string>#5D9CF580</string>
-
-	<key>textInputFieldTextContainerInset</key>
-	<string>0 0</string>
-
-	<key>textInputFocusRingColor</key>
-	<string>clearColor</string>
-	<key>textInputInactiveFocusRingColor</key>
-	<string>clearColor</string>
-
-	<key>textInputBackgroundColor</key>
-	<string>clearColor</string>
-	<key>textInputEdgeInsets</key>
-	<string>8 5 3 8</string>
-	<key>textInputFieldEditorEdgeInsets</key>
-	<string>3.5 0 3 14</string>
-	<key>textInputFieldEditorEdgeInsets@1x</key>
-	<string>3.5 0 3.5 14</string>
-	<key>textInputFieldTextContainerInset</key>
-	<string>0 0</string>
-
-
-
-
-	<key>itemListSeparatorUpperLineThickness</key>
-	<integer>1</integer>
-	<key>itemListSeparatorUpperLineColor</key>
-	<string>#ffffff15</string>
-
-	<key>itemListSeparatorLowerLineThickness</key>
-	<integer>0</integer>
-	<key>itemListSeparatorLowerLineColor</key>
-	<string>clearColor</string>
-
-	<key>itemListGridLineHeight</key>
-	<integer>0</integer>
-	<key>itemListGridLineShadowGradient</key>
-	<dict>
-	<key>0.0</key>
-		<string>1 1 1 0.09</string>
-		<key>0.1</key>
-		<string>1 1 1 0.09</string>
-		<key>0.9</key>
-		<string>1 1 1 0.09</string>
-		<key>1.0</key>
-		<string>1 1 1 0.09</string>
-	</dict>
-
-
-
-
-	<key>itemListRowHeight</key>
-	<string>40.0</string>
-
-	<key>itemListTitleFontSize</key>
-	<string>16.0</string>
-	<key>itemListSubtitleFontSize</key>
-	<string>14.0</string>
-	<key>itemListSubtitleInSeparateLine</key>
-	<false/>
-
-
-	<key>itemListTitleBaselineOffset</key>
-	<string>-1.5</string>
-	<key>itemListSubtitleBaselineOffset</key>
-	<string>-1.65</string>
-
-	<key>itemListTitleFontName</key>
-	<string>mediumtSystemFont</string>
-	<key>itemListSubtitleFontName</key>
-	<string>regularSystemFont</string>
-
-
-	<key>itemListTitleTextColor</key>
-	<string>#ffffff</string>
-
-	<key>itemListSubtitleTextColor</key>
-	<string>#ffffff65</string>
-	<key>itemListSelectedSubtitleTextColor</key>
-	<string>#b0e9ff</string>
 
 	<key>itemListSelectionHighlightColor</key>
 	<string>#0A83FE</string>
 	<key>itemListSelectionSubsearchHighlightColor</key>
-	<string>#0A83FE</string>
+	<string>@itemListSelectionHighlightColor - 0.15</string>
 
-	<key>itemListEdgeInsets</key>
-	<string>12 12 12 12</string>
-
-	<key>itemListIconPaddingLeft</key>
-	<integer>12</integer>
-	<key>itemListNavigationArrowPaddingRight</key>
-	<integer>12</integer>
+	<key>itemListSelectedSubtitleTextColor</key>
+	<string>#a6daff</string>
 
 
-	<key>itemListScrollerColor</key>
-	<string>#ffffff30</string>
-	<key>itemListScrollerWidth</key>
-	<integer>6</integer>
+	<key>windowDefaultWidth</key>
+	<string>700</string>
+	<key>windowMinimumWidth</key>
+	<string>700</string>
+
+
+	<key>inputAreaBackgroundGradient</key>
+	<dict>
+	<key>0.0</key>
+	<string>clearColor</string>
+	<key>0.0</key>
+	<string>clearColor</string>
+	</dict>
+
+
+	<key>itemListGridLineHeight</key>
+	<integer>0</integer>
+	<key>itemListGridLineGradient</key>
+	<dict>
+		<key>0.0</key>
+		<string>1 1 1 0.04</string>
+		<key>0.1</key>
+		<string>1 1 1 0.04</string>
+		<key>0.9</key>
+		<string>1 1 1 0.04</string>
+		<key>1.0</key>
+		<string>1 1 1 0.04</string>
+	</dict>
+	<key>itemListGridLineShadowHeight</key>
+	<integer>0</integer>
+
+
+	<key>windowBackgroundColor</key>
+	<string>0 0 0 0.20</string>
+	<key>windowBackgroundMaterial</key>
+	<string>21</string>
+	<key>windowBackgroundIsDark</key>
+	<true/>
+
+
 
 
 	<key>itemListStagedItemHighlightLevel</key>
-	<real>0.45</real>
+	<real>0.3</real>
+	<key>itemListSubtitleTextColor</key>
+	<string>@defaultTextColor - 0.35</string>
 
-
-	<key>itemListExtraDetailsBaselineOffset</key>
-	<integer>0</integer>
-	<key>itemListExtraDetailsFontName</key>
-	<string>@defaultFontName</string>
-
-	<key>itemListLabeledExtraDetailsBaselineOffset</key>
-	<integer>0</integer>
-	<key>itemListLabeledExtraDetailsDeemphasizedBaselineOffset</key>
-	<integer>1</integer>
-
-	<key>itemListLabeledExtraDetailsFontName</key>
-	<string>lightMonospacedDigitSystemFont</string>
-	<key>itemListNavigationArrowAreaWidth</key>
-	<integer>35</integer>
-
-
-	<key>itemListSelectedSubtitleFontName@1x</key>
-	<string>@itemListSubtitleFontName</string>
-
-
-	<key>itemListSelectedTitleFontName@1x</key>
-	<string>mediumtSystemFont</string>
-	<key>itemListSelectedTitleFontName@2x</key>
-	<string>mediumSystemFont</string>
-	<key>itemListSelectedSubtitleFontName@1x</key>
-	<string>@itemListSubtitleFontName</string>
-	<key>itemListTitleEmphasizedFontName</key>
-	<string>@defaultEmphasizedFontName</string>
-
-
-	<key>itemListNavigationArrowImage</key>
-	<string>NavigationArrow</string>
-	<key>itemListNavigationArrowImageH</key>
-	<string>NavigationArrowH</string>
-
+	<key>defaultTextColor</key>
+	<string>whiteColor</string>
+	<key>defaultTextShadowColor</key>
+	<string>#00000033</string>
+	<key>defaultTextShadowColor@2x</key>
+	<string>clearColor</string>
+	<key>defaultDimmedTextColor</key>
+	<string>0.8 0.8 0.8</string>
+	<key>inputAreaAbbreviationTextColor</key>
+	<string>#f9f9f9</string>
+	<key>inputAreaActionMenuAreaBackgroundColor</key>
+	<string>1 1 1 0.1</string>
+	<key>inputAreaNonKeyWindowTextColorOffsetLevel</key>
+	<real>-0.3</real>
+	<key>inputAreaTextColor</key>
+	<string>@defaultTextColor</string>
+	<key>textInputPlaceholderTextColor</key>
+	<string>#999999</string>
+	
 </dict>
 </plist>
