--- a/launchbar-themes/macOS Dark — XL.lbtheme/Contents/Info.plist
+++ b/launchbar-themes/macOS Dark — XL.lbtheme/Contents/Info.plist
@@ -3,12 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.jonohunt.LaunchBar.theme.macOS-Dark-XL</string>
+	<string>com.jonohunt.LaunchBar.theme.macOS.Dark-XL</string>
 	<key>CFBundleName</key>
 	<string>macOS Dark — XL</string>
-	<key>LBThemeDescription</key>
-	<string>Dark theme based on a standard macOS look. Input Area icon size = 40x40. Item List icon size = 32x32.</string>
-	<key>LSMinimumSystemVersion</key>
-	<string>10.11</string>
 </dict>
 </plist>
